--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <iframe
+      src="%PUBLIC_URL%/silence.mp3"
+      allow="autoplay"
+      style="display:none"
+    ></iframe>
     <div id="root"></div>
   </body>
 </html>
